[package]
name = "meatpack"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A Rust implementation of the MeatPack algorithm for encoding gcode."
repository = "https://github.com/jamesgopsill/meatpack"
readme = "README.md"
keywords = ["gcode", "no_std", "MEX", "FDM", "3d_printing"]

[features]
default = []
alloc = []

[[example]]
name = "pack"

[[example]]
name = "unpack"

[[example]]
name = "pack_unpack"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
