[package]
name = "meatpack"
version = "0.0.2"
edition = "2021"
license = "MIT"
description = "A Rust implementation of the MeatPack algorithm for encoding gcode."
repository = "https://github.com/jamesgopsill/meatpack"
readme = "README.md"
keywords = ["gcode", "no_std", "MEX", "FDM", "3d_printing"]

[features]
default = []
alloc = []

[[example]]
name = "pack"

[[example]]
name = "unpack"

[[example]]
name = "pack_unpack"

[[example]]
name = "alloc_pack"
required-features = ["alloc"]

[[example]]
name = "alloc_unpack"
required-features = ["alloc"]

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
