[package]
name = "meatpack"
version = "0.0.3"
edition = "2024"
license = "MIT"
description = "A Rust implementation of the MeatPack algorithm for encoding gcode."
repository = "https://github.com/jamesgopsill/meatpack"
readme = "README.md"
keywords = ["gcode", "no_std", "MEX", "FDM", "3d_printing"]

[features]
default = []
alloc = []

[[example]]
name = "pack"

[[example]]
name = "unpack"

[[example]]
name = "pack_unpack"

[[example]]
name = "alloc_pack"
required-features = ["alloc"]

[[example]]
name = "alloc_unpack"
required-features = ["alloc"]

[dependencies]
thiserror = { version = "2.0.12", default-features = false }
clap = { version = "4.5.35", features = ["derive"] }
